2008-12-15  Michiel Roos <michiel@netcreators.com>

	* Fixed #9819: DAM Usage Information Enhancement (Thanks to Stanislas Rolland)
	* Fixed #9928: Bring back Tabs! (Thanks to Dan Osipov)

2008-12-08  Michiel Roos <michiel@netcreators.com>

	* Fixed #9552: Clean Up Click Menu (Thanks to Dan Osipov)
	* Fixed #9646: DAM does not honour config['selectedListStyle'] and config['itemListStyle'] (Thanks to Uschi Renziehausen)
	* Fixed #9733: Rename, Replace file and Delete functionalities missing docheaders (Thanks to Dan Osipov)
	* Fixed #9644: DAM 1.1 is not aware of mpeg4 (Thanks to Dan Osipov and Uschi Renziehausen)
	* Fixed #9403: Missing media types: psd and odt (Thanks to Dan Osipov)
	* Fixed #9558: Lay out of DAM>list>thumbnails messed up in Opera (Thanks to Pee Jee Kruidhof and Steffen Gebert)

2008-11-17  Dan Osipov <dosipov@phillyburbs.com>

	* Fixed #9551: Inconsistent placement lang selector in docheader

2008-11-10  Benjamin Mack <benni@typo3.org>

	* Fixed #9548: No docheader for edit text (Thanks to Dan Osipov and Steffen Gebert)
	* Fixed #9559: Cleanup: DAM doesn't depend on ceflexform anymore (Thanks to Francois Suter)
	* Fixed #9702: New Folder module lacks docheaders (Patch by Dan Osipov)

2008-10-12  Dan Osipov <dosipov@phillyburbs.com>

	* Fixed bugs #9550: DAM>FILE submodules have double refresh and fileadmin
	* Fixed bugs #9555: Information about services

2008-10-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #8673: Correction for add icon

2008-10-12  Benjamin Mack  <benni@typo3.org>

	* Followup to Steffen's Clickmenu patch, solving an issue in file and list. Thanks to Steffen Gebert

2008-09-24  Benjamin Mack  <benni@typo3.org>

	* Allow additional Clickmenu items in the Filelist Clickmenu (Thanks to Steffen Kamper)

2008-09-22  Benjamin Mack  <benni@typo3.org>

	* Integrated mod_info into main DAM 1.1 (is the one below)
	* Fixed issue #8466: Info module does not show any information (blank main frame) (thanks to David Steeb)
