@@ -1,7 +1,5 @@
   # cat=basic/enable; type=options[ Default setup=default,  Minimal (most disabled)=minimal, Example (many options switched on or off)=example, None (nothing set)=none  ]; label=Setup: TSconfig setup defining modules functions and indexing behaviour.
 tsconfig = default
-  # cat=basic/enable; type=boolean; label= Enable Tabs: Tabs have been disabled in this version for better integration with the Core. Switch this setting on to keep the tabs in the modules.
-tabs = 0
   # cat=basic/enable; type=boolean; label= Enable Web>File: This enables the old Web>File module which shouldn't be needed anymore when using the DAM. Keep in mind that the Web>File module manage files without notifying the DAM about changes which generates inconsistencies.
 web_file = 0
   # cat=basic/enable; type=boolean; label= Hide Media sysfolder: This adds global user TSConfig which hides the Media sysfolder for all users (options.hideRecords.pages = xx).
